--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/pasta_primavera.html">Pasta Primavera</a>
+        <ul>
+            <li>
+                <a href="./recipes/pasta_primavera.html">Pasta Primavera</a>
+            </li>
+            <li>
+                <a href="./recipes/polvo-a-lagareiro.html">Polvo à Lagareiro</a>
+            </li>
+            <li>
+                <a href="./recipes/caramel-pork.html">Vietnamese-Style Caramel Pork</a>
+            </li>
+        </ul>
     </body>
 </html>
