--- a/recipes/caramel-pork.html
+++ b/recipes/caramel-pork.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Vietnamese-style Caramel Pork</title>
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
     <h1>Vietnamese-style Caramel Pork</h1>
     <img src="../images/caramel-pork.jpg" alt="ready-to-eat caramel pork dish">
     <h5>Description</h5>
-    <p>Stir-fry chunks of pork with shallots, ginger and chilli in a wok then add fish sauce and brown sugar for a sweet, sticky and spicy sauce.</p>
+    <p class="desc">Stir-fry chunks of pork with shallots, ginger and chilli in a wok then add fish sauce and brown sugar for a sweet, sticky and spicy sauce.</p>
     <h5>Ingredients</h5>
     <ul>
         <li>1 ½ tbsp groundnut oil</li>
