--- a/recipes/pasta_primavera.html
+++ b/recipes/pasta_primavera.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Pasta Primavera</title>
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
     <h1>Pasta Primavera</h1>
     <img src="../images/pasta-primavera.jpg" alt="ready-to-eat pasta primavera dish">
     <h5>Description</h5>
-    <p>Pasta primavera is quite a straightforward recipe; spaghetti or fettuccine tossed with an array of fresh spring vegetables. 
+    <p class="desc">Pasta primavera is quite a straightforward recipe; spaghetti or fettuccine tossed with an array of fresh spring vegetables. 
         When done right, this is one of the year's great seasonal recipes. This looks, smells, and tastes like a cool, sunny spring day.</p>
     <h5>Ingredients</h5>
     <ul>
