--- a/recipes/polvo-a-lagareiro.html
+++ b/recipes/polvo-a-lagareiro.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Polvo à Lagareiro</title>
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
     <h1>Polvo à Lagareiro</h1>
     <img src="../images/octopus-lagareiro.jpg" alt="ready-to-eat baked octopus dish">
     <h5>Description</h5>
-    <p>This delicious, simple and traditional recipe of baked octopus with potatoes is highly appreciated in Portugal. 
+    <p class="desc">This delicious, simple and traditional recipe of baked octopus with potatoes is highly appreciated in Portugal. 
         It's a very simple recipe to make, cook the potatoes and the octopus, season with garlic, pepper and bay leaf and bake. 
         Sprinkle with chopped parsley and serve. Bon appetit!</p>
     <h5>Ingredients</h5>
