--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="./style/style.css">
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
+        <ul class="dishlist">
             <li>
                 <a href="./recipes/pasta_primavera.html">Pasta Primavera</a>
             </li>
